# ChangeLog for sys-apps/util-linux
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.45 2003/07/12 17:42:40 solar Exp $

*util-linux-2.11z-r5 (12 Jul 2003)

  12 Jul 2003; <solar@gentoo.org> util-linux-2.11z-r5.ebuild,
  files/util-linux-2.11z-pic.patch:
  Added defines for fPIC code to avoid the use the of old __NR* inline assembly
  construction of syscalls

  05 Jul 2003; Luca Barbato <lu_zero@gentoo.org> util-linux-2.11z-r4.ebuild:
  Keyworded ppc

  29 Jun 2003; Chris PeBenito <pebenito@gentoo.org>
  util-linux-2.11z-r4.ebuild:
  Remove selinux stuff, as its no longer needed.  Using pam-login again.

  26 Jun 2003; Joshua Brindle <method@gentoo.org> util-linux-2.11z-r4.ebuild:
  Added -e s:SUIDMODE=.*4755:SUIDMODE=4711: for more secure suid permissions

  24 Jun 2003; Aron Griffis <agriffis@gentoo.org> util-linux-2.11z-r4.ebuild:
  Mark stable on alpha

*util-linux-2.11z-r4 (01 Jun 2003)

  06 Jul 2003; Guy Martin <gmsoft@gentoo.org> util-linux-2.11z-r4.ebuild :
  Marked stable on hppa.

  22 Jun 2003; Joshua Kinard <kumba@gentoo.org> util-linux-2.11z-r4.ebuild:
  Changed ~sparc & ~mips to sparc & mips

  09 Jun 2003; Nick Hadaway <raker@gentoo.org> util-linux-2.11z-r4.ebuild:
  If pam was disabled in IUSE, src_unpack would fail.  Fixed the logic.

  01 Jun 2003; Brandon Low <lostlogic@gentoo.org> util-linux-2.11z-r4.ebuild:
  Add enhancement to script command from bug 21147

  26 May 2003; Patrick Kursawe <phosphan@gentoo.org>
  util-linux-2.11z-r3.ebuild:
  category was missing with sed dependency

  25 May 2003; Martin Holzer <mholzer@gentoo.org> util-linux-2.11o-r3.ebuild,
  util-linux-2.11y.ebuild, util-linux-2.11z-r1.ebuild,
  util-linux-2.11z-r2.ebuild, util-linux-2.11z-r3.ebuild:
  now uses mirror://kernel

  25 May 2003; Seemant Kulleen <seemant@gentoo.org>
  util-linux-2.11z-r3.ebuild:
  pam fix

*util-linux-2.11z-r3 (24 May 2003)
