@@ -1,6 +1,6 @@
-MD5 9043aa41895acd976b45ebfd9948d3bc ChangeLog 7199
 MD5 fdc6f7ebf1e7f279d96f19c330868aa2 util-linux-2.11y.ebuild 2109
-MD5 c8193ffb13cb982c0873b778b8d38415 util-linux-2.11z-r5.ebuild 2814
+MD5 7ccd833aaea0eba0baa96e7ed91903be ChangeLog 7321
+MD5 c6692828888581ffce700c60c14ea9b8 util-linux-2.11z-r5.ebuild 2776
 MD5 b73abbe53ce7a49cad81cc855b7d5924 util-linux-2.11z-r4.ebuild 2410
 MD5 48e36b9b6ea3bed4ea25292f9ae5a958 files/digest-util-linux-2.11y 152
 MD5 02afa4d774f45ab0b9ef42ecc1748005 files/digest-util-linux-2.11z-r4 153
